Fixed maps on mobile

--- a/css/home.css
+++ b/css/home.css
@@ -423,6 +423,10 @@ form button:hover {
         padding-left: 20px
     }
 
+    #maps {
+        padding: 20px;
+    }
+
     #contact form {
         margin-left: auto;
         margin-right: auto;
